--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,16 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports here\n",
     "import os\n",
-    "from torch import nn\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "from torchvision import datasets, transforms, models\n",
     "from torch.utils.data import DataLoader\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -48,11 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 10"
+    "BATCH_SIZE = 10\n",
+    "HIDDEN_NEURONS = 512"
    ]
   },
   {
@@ -71,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,34 +91,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Define your transforms for the training, validation, and testing sets\n",
-    "train_transforms = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
-    "    transforms.CenterCrop((224, 224)),\n",
-    "    transforms.RandomHorizontalFlip(p=0.5),\n",
-    "    transforms.RandomVerticalFlip(p=0.5),\n",
-    "    transforms.RandomRotation(degrees=(45, 115))\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                std=[0.229, 0.224, 0.225])]\n",
-    ")\n",
-    "valid_test_transforms = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
-    "    transforms.CenterCrop((224, 224)),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                std=[0.229, 0.224, 0.225])]\n",
-    ")\n",
+    "image_transforms = {\n",
+    "    'train': transforms.Compose([\n",
+    "        transforms.RandomResizedCrop(size=(224, 224), scale=(0.8, 1.0)),\n",
+    "        transforms.RandomRotation(degrees=45),\n",
+    "        transforms.RandomHorizontalFlip(),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                             std=[0.229, 0.224, 0.225])\n",
+    "    ]),\n",
+    "    'valid': transforms.Compose([\n",
+    "        transforms.Resize((224, 224)),\n",
+    "        transforms.CenterCrop((224, 224)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                             std=[0.229, 0.224, 0.225])]),\n",
+    "    'test': transforms.Compose([\n",
+    "        transforms.Resize((224, 224)),\n",
+    "        transforms.CenterCrop((224, 224)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                             std=[0.229, 0.224, 0.225])]),\n",
+    "}\n",
     "\n",
-    "# TODO: Load the datasets with ImageFolder\n",
-    "train_dataset = datasets.ImageFolder(root=train_dir, transform=train_transforms)\n",
-    "valid_dataset = datasets.ImageFolder(root=valid_dir, transform=valid_test_transforms)\n",
-    "test_dataset = datasets.ImageFolder(root=test_dir, transform=valid_test_transforms)\n",
+    "image_datasets = {\n",
+    "    'train': datasets.ImageFolder(root=train_dir, transform=image_transforms['train']),\n",
+    "    'valid': datasets.ImageFolder(root=valid_dir, transform=image_transforms['valid']),\n",
+    "    'test': datasets.ImageFolder(root=test_dir, transform=image_transforms['test'])\n",
+    "}\n",
     "\n",
-    "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
-    "train_loader = DataLoader(dataset=train_dataset, batch_size=BATCH_SIZE, shuffle=True,  num_workers=2)\n",
-    "valid_loader = DataLoader(dataset=valid_dataset, batch_size=BATCH_SIZE, shuffle=True,  num_workers=2)\n",
-    "test_loader = DataLoader(dataset=test_dataset, batch_size=BATCH_SIZE, shuffle=True,  num_workers=2)"
+    "dataloaders = {\n",
+    "    'train': DataLoader(dataset=image_datasets['train'], batch_size=BATCH_SIZE, shuffle=True),\n",
+    "    'valid': DataLoader(dataset=image_datasets['valid'], batch_size=BATCH_SIZE, shuffle=True),\n",
+    "    'test': DataLoader(dataset=image_datasets['test'], batch_size=BATCH_SIZE, shuffle=True)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([10, 3, 224, 224]), torch.Size([10]))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainiter = iter(dataloaders['train'])\n",
+    "features, labels = next(trainiter)\n",
+    "features.shape, labels.shape"
    ]
   },
   {
@@ -128,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,13 +197,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.python/current/lib/python3.10/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/home/codespace/.python/current/lib/python3.10/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /home/codespace/.cache/torch/hub/checkpoints/vgg16-397923af.pth\n",
+      "100.0%\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'VGG' object has no attribute 'fc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m param \u001b[39min\u001b[39;00m myvgg\u001b[39m.\u001b[39mparameters():\n\u001b[1;32m      4\u001b[0m     param\u001b[39m.\u001b[39mrequires_grad \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m features \u001b[39m=\u001b[39m myvgg\u001b[39m.\u001b[39;49mfc\u001b[39m.\u001b[39min_features\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1614\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1612\u001b[0m     \u001b[39mif\u001b[39;00m name \u001b[39min\u001b[39;00m modules:\n\u001b[1;32m   1613\u001b[0m         \u001b[39mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1614\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m object has no attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m   1615\u001b[0m     \u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, name))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'VGG' object has no attribute 'fc'"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: Load pre-trained models and freeze parameters\n",
+    "myvgg = models.vgg16(pretrained=True)\n",
+    "for param in myvgg.parameters():\n",
+    "    param.requires_grad = False\n",
+    "\n",
+    "features = myvgg.fc.in_features"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO: Build and train your network\n",
-    "vgg16 = models.vgg16(pretrained=True)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -188,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Do validation on the test set"
+    "# TODO: Do validation on the test set\n"
    ]
   },
   {
@@ -210,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Save the checkpoint "
+    "# TODO: Save the checkpoint\n"
    ]
   },
   {
@@ -228,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Write a function that loads a checkpoint and rebuilds the model"
+    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n"
    ]
   },
   {
@@ -272,8 +340,8 @@
     "    ''' Scales, crops, and normalizes a PIL image for a PyTorch model,\n",
     "        returns an Numpy array\n",
     "    '''\n",
-    "    \n",
-    "    # TODO: Process a PIL image for use in a PyTorch model"
+    "\n",
+    "    # TODO: Process a PIL image for use in a PyTorch model\n"
    ]
   },
   {
@@ -293,22 +361,22 @@
     "    \"\"\"Imshow for Tensor.\"\"\"\n",
     "    if ax is None:\n",
     "        fig, ax = plt.subplots()\n",
-    "    \n",
+    "\n",
     "    # PyTorch tensors assume the color channel is the first dimension\n",
     "    # but matplotlib assumes is the third dimension\n",
     "    image = image.numpy().transpose((1, 2, 0))\n",
-    "    \n",
+    "\n",
     "    # Undo preprocessing\n",
     "    mean = np.array([0.485, 0.456, 0.406])\n",
     "    std = np.array([0.229, 0.224, 0.225])\n",
     "    image = std * image + mean\n",
-    "    \n",
+    "\n",
     "    # Image needs to be clipped between 0 and 1 or it looks like noise when displayed\n",
     "    image = np.clip(image, 0, 1)\n",
-    "    \n",
+    "\n",
     "    ax.imshow(image)\n",
-    "    \n",
-    "    return ax"
+    "\n",
+    "    return ax\n"
    ]
   },
   {
@@ -341,8 +409,8 @@
     "def predict(image_path, model, topk=5):\n",
     "    ''' Predict the class (or classes) of an image using a trained deep learning model.\n",
     "    '''\n",
-    "    \n",
-    "    # TODO: Implement the code to predict the class from an image file"
+    "\n",
+    "    # TODO: Implement the code to predict the class from an image file\n"
    ]
   },
   {
@@ -364,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Display an image along with the top 5 classes"
+    "# TODO: Display an image along with the top 5 classes\n"
    ]
   }
  ],
