--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +35,14 @@
     "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
     "from torchvision import datasets, transforms, models\n",
     "from torch.utils.data import DataLoader\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "import time\n",
+    "from PIL import Image\n",
+    "from tempfile import TemporaryDirectory"
    ]
   },
   {
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +141,7 @@
        "(torch.Size([10, 3, 224, 224]), torch.Size([10]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,41 +200,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/codespace/.python/current/lib/python3.10/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "/home/codespace/.python/current/lib/python3.10/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n",
-      "Downloading: \"https://download.pytorch.org/models/vgg16-397923af.pth\" to /home/codespace/.cache/torch/hub/checkpoints/vgg16-397923af.pth\n",
-      "100.0%\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'VGG' object has no attribute 'fc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m param \u001b[39min\u001b[39;00m myvgg\u001b[39m.\u001b[39mparameters():\n\u001b[1;32m      4\u001b[0m     param\u001b[39m.\u001b[39mrequires_grad \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m features \u001b[39m=\u001b[39m myvgg\u001b[39m.\u001b[39;49mfc\u001b[39m.\u001b[39min_features\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1614\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1612\u001b[0m     \u001b[39mif\u001b[39;00m name \u001b[39min\u001b[39;00m modules:\n\u001b[1;32m   1613\u001b[0m         \u001b[39mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> 1614\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m object has no attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m   1615\u001b[0m     \u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, name))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'VGG' object has no attribute 'fc'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "class_names = image_datasets['train'].classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# TODO: Load pre-trained models and freeze parameters\n",
-    "myvgg = models.vgg16(pretrained=True)\n",
-    "for param in myvgg.parameters():\n",
+    "weights = models.VGG16_Weights.DEFAULT\n",
+    "model = models.vgg16(weights=weights)\n",
+    "for param in model.parameters():\n",
     "    param.requires_grad = False\n",
+    "classifier_in_features = model.classifier[6].in_features\n",
+    "model.classifier[6] = nn.Linear(in_features=classifier_in_features, out_features=10)\n",
+    "model.classifier[6]\n",
+    "criterion = nn.CrossEntropyLoss()\n",
     "\n",
-    "features = myvgg.fc.in_features"
+    "optimizer_cov = optim.SGD(params=model.classifier.parameters(), lr=0.001, momentum=0.9)  \n",
+    "# SGD(model.classifier.parameters(), lr=0.001, momentum=0.9)"
    ]
   },
   {
@@ -239,7 +232,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def train_model(model, criterion, optimizer, scheduler, num_epochs=25):\n",
+    "    since = time.time()\n",
+    "    with TemporaryDirectory() as tempdir:\n",
+    "        best_model_params_path = os.path.join(tempdir, 'best_model_params.pt')\n",
+    "        \n",
+    "        torch.save(model.state_dict(), best_model_params_path)\n",
+    "        best_acc = 0.0\n",
+    "\n",
+    "        for epoch in range(num_epochs):\n",
+    "            print(f'Eppch {epoch}/{num_epochs - 1}')\n",
+    "            print('-' * 10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class CustomVGG(nn.Module):\n",
+    "#     def __init__(self, model):\n",
+    "#         super(CustomVGG, self).__init__()\n",
+    "#         self.model = model\n",
+    "#         self.classifier = nn.Sequential(\n",
+    "#             nn.ReLU()\n",
+    "#             nn.DropOut()\n",
+    "\n",
+    "#         )"
+   ]
   },
   {
    "cell_type": "markdown",
