--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,24 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([10, 3, 224, 224]), torch.Size([10]))"
+       "device(type='cpu')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "dataset_sizes = {x: len(image_datasets[x]) for x in ['train', 'valid', 'test']}\n",
     "trainiter = iter(dataloaders['train'])\n",
     "features, labels = next(trainiter)\n",
-    "features.shape, labels.shape"
+    "features.shape, labels.shape\n",
+    "device"
    ]
   },
   {
@@ -163,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,58 +212,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VGG(\n",
+      "  (features): Sequential(\n",
+      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (1): ReLU(inplace=True)\n",
+      "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (3): ReLU(inplace=True)\n",
+      "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (6): ReLU(inplace=True)\n",
+      "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (8): ReLU(inplace=True)\n",
+      "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (11): ReLU(inplace=True)\n",
+      "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (13): ReLU(inplace=True)\n",
+      "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (15): ReLU(inplace=True)\n",
+      "    (16): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (17): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (18): ReLU(inplace=True)\n",
+      "    (19): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (20): ReLU(inplace=True)\n",
+      "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (22): ReLU(inplace=True)\n",
+      "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (24): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (25): ReLU(inplace=True)\n",
+      "    (26): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (27): ReLU(inplace=True)\n",
+      "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    (29): ReLU(inplace=True)\n",
+      "    (30): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  )\n",
+      "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
+      "  (classifier): Sequential(\n",
+      "    (0): Linear(in_features=25088, out_features=4096, bias=True)\n",
+      "    (1): ReLU(inplace=True)\n",
+      "    (2): Dropout(p=0.5, inplace=False)\n",
+      "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
+      "    (4): ReLU(inplace=True)\n",
+      "    (5): Dropout(p=0.5, inplace=False)\n",
+      "    (6): Linear(in_features=4096, out_features=102, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Load pre-trained models and freeze parameters\n",
     "weights = models.VGG16_Weights.DEFAULT\n",
     "model = models.vgg16(weights=weights)\n",
     "for param in model.parameters():\n",
     "    param.requires_grad = False\n",
-    "classifier_in_features = model.classifier[6].in_features\n",
-    "model.classifier[6] = nn.Linear(in_features=classifier_in_features, out_features=10)\n",
-    "model.classifier[6]\n",
+    "\n",
+    "# model.classifer = nn.Sequential(\n",
+    "#     nn.Linear(in_features=25088, out_features=4096, bias=True),\n",
+    "#     nn.ReLU(inplace=True),\n",
+    "#     nn.Dropout(),\n",
+    "#     nn.Linear(in_features=4096, out_features=4096, bias=True),\n",
+    "#     nn.ReLU(inplace=True),\n",
+    "#     nn.Dropout(),\n",
+    "#     nn.Linear(in_features=4096, out_features=10, bias=True)\n",
+    "# )\n",
+    "model.classifier[6] = nn.Linear(in_features=4096, out_features=102)\n",
+    "print(model)\n",
+    "model = model.to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
-    "optimizer_cov = optim.SGD(params=model.classifier.parameters(), lr=0.001, momentum=0.9)  \n",
-    "# SGD(model.classifier.parameters(), lr=0.001, momentum=0.9)"
+    "optimizer = optim.SGD(params=model.classifier.parameters(), lr=0.001, momentum=0.9)  \n",
+    "exp_lr_scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=7, gamma=0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_model(model, criterion, optimizer, scheduler, num_epochs=25):\n",
     "    since = time.time()\n",
+    "\n",
+    "    # Create a temporary directory to save training checkpoints\n",
     "    with TemporaryDirectory() as tempdir:\n",
     "        best_model_params_path = os.path.join(tempdir, 'best_model_params.pt')\n",
-    "        \n",
+    "\n",
     "        torch.save(model.state_dict(), best_model_params_path)\n",
     "        best_acc = 0.0\n",
     "\n",
     "        for epoch in range(num_epochs):\n",
-    "            print(f'Eppch {epoch}/{num_epochs - 1}')\n",
-    "            print('-' * 10)\n"
+    "            print(f'Epoch {epoch}/{num_epochs - 1}')\n",
+    "            print('-' * 10)\n",
+    "\n",
+    "            # Each epoch has a training and validation phase\n",
+    "            for phase in ['train', 'val']:\n",
+    "                if phase == 'train':\n",
+    "                    model.train()  # Set model to training mode\n",
+    "                else:\n",
+    "                    model.eval()   # Set model to evaluate mode\n",
+    "\n",
+    "                running_loss = 0.0\n",
+    "                running_corrects = 0\n",
+    "\n",
+    "                # Iterate over data.\n",
+    "                for inputs, labels in dataloaders[phase]:\n",
+    "                    inputs = inputs.to(device)\n",
+    "                    labels = labels.to(device)\n",
+    "\n",
+    "                    # zero the parameter gradients\n",
+    "                    optimizer.zero_grad()\n",
+    "\n",
+    "                    # forward\n",
+    "                    # track history if only in train\n",
+    "                    with torch.set_grad_enabled(phase == 'train'):\n",
+    "                        outputs = model(inputs)\n",
+    "                        _, preds = torch.max(outputs, 1)\n",
+    "                        loss = criterion(outputs, labels)\n",
+    "\n",
+    "                        # backward + optimize only if in training phase\n",
+    "                        if phase == 'train':\n",
+    "                            loss.backward()\n",
+    "                            optimizer.step()\n",
+    "\n",
+    "                    # statistics\n",
+    "                    running_loss += loss.item() * inputs.size(0)\n",
+    "                    running_corrects += torch.sum(preds == labels.data)\n",
+    "                if phase == 'train':\n",
+    "                    scheduler.step()\n",
+    "\n",
+    "                epoch_loss = running_loss / dataset_sizes[phase]\n",
+    "                epoch_acc = running_corrects.double() / dataset_sizes[phase]\n",
+    "\n",
+    "                print(f'{phase} Loss: {epoch_loss:.4f} Acc: {epoch_acc:.4f}')\n",
+    "\n",
+    "                # deep copy the model\n",
+    "                if phase == 'val' and epoch_acc > best_acc:\n",
+    "                    best_acc = epoch_acc\n",
+    "                    torch.save(model.state_dict(), best_model_params_path)\n",
+    "\n",
+    "            print()\n",
+    "\n",
+    "        time_elapsed = time.time() - since\n",
+    "        print(f'Training complete in {time_elapsed // 60:.0f}m {time_elapsed % 60:.0f}s')\n",
+    "        print(f'Best val Acc: {best_acc:4f}')\n",
+    "\n",
+    "        # load best model weights\n",
+    "        model.load_state_dict(torch.load(best_model_params_path))\n",
+    "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0/24\n",
+      "----------\n"
+     ]
+    }
+   ],
    "source": [
-    "# class CustomVGG(nn.Module):\n",
-    "#     def __init__(self, model):\n",
-    "#         super(CustomVGG, self).__init__()\n",
-    "#         self.model = model\n",
-    "#         self.classifier = nn.Sequential(\n",
-    "#             nn.ReLU()\n",
-    "#             nn.DropOut()\n",
-    "\n",
-    "#         )"
+    "model_ft = train_model(model, criterion, optimizer, exp_lr_scheduler, num_epochs=25)"
    ]
   },
   {
