--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -132,16 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "device(type='cpu')"
+       "device(type='cuda', index=0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,16 +203,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1',\n",
+       " '10',\n",
+       " '100',\n",
+       " '101',\n",
+       " '102',\n",
+       " '11',\n",
+       " '12',\n",
+       " '13',\n",
+       " '14',\n",
+       " '15',\n",
+       " '16',\n",
+       " '17',\n",
+       " '18',\n",
+       " '19',\n",
+       " '2',\n",
+       " '20',\n",
+       " '21',\n",
+       " '22',\n",
+       " '23',\n",
+       " '24',\n",
+       " '25',\n",
+       " '26',\n",
+       " '27',\n",
+       " '28',\n",
+       " '29',\n",
+       " '3',\n",
+       " '30',\n",
+       " '31',\n",
+       " '32',\n",
+       " '33',\n",
+       " '34',\n",
+       " '35',\n",
+       " '36',\n",
+       " '37',\n",
+       " '38',\n",
+       " '39',\n",
+       " '4',\n",
+       " '40',\n",
+       " '41',\n",
+       " '42',\n",
+       " '43',\n",
+       " '44',\n",
+       " '45',\n",
+       " '46',\n",
+       " '47',\n",
+       " '48',\n",
+       " '49',\n",
+       " '5',\n",
+       " '50',\n",
+       " '51',\n",
+       " '52',\n",
+       " '53',\n",
+       " '54',\n",
+       " '55',\n",
+       " '56',\n",
+       " '57',\n",
+       " '58',\n",
+       " '59',\n",
+       " '6',\n",
+       " '60',\n",
+       " '61',\n",
+       " '62',\n",
+       " '63',\n",
+       " '64',\n",
+       " '65',\n",
+       " '66',\n",
+       " '67',\n",
+       " '68',\n",
+       " '69',\n",
+       " '7',\n",
+       " '70',\n",
+       " '71',\n",
+       " '72',\n",
+       " '73',\n",
+       " '74',\n",
+       " '75',\n",
+       " '76',\n",
+       " '77',\n",
+       " '78',\n",
+       " '79',\n",
+       " '8',\n",
+       " '80',\n",
+       " '81',\n",
+       " '82',\n",
+       " '83',\n",
+       " '84',\n",
+       " '85',\n",
+       " '86',\n",
+       " '87',\n",
+       " '88',\n",
+       " '89',\n",
+       " '9',\n",
+       " '90',\n",
+       " '91',\n",
+       " '92',\n",
+       " '93',\n",
+       " '94',\n",
+       " '95',\n",
+       " '96',\n",
+       " '97',\n",
+       " '98',\n",
+       " '99']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class_names = image_datasets['train'].classes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/resnet18-f37072fd.pth\" to C:\\Users\\dorjn/.cache\\torch\\hub\\checkpoints\\resnet18-f37072fd.pth\n",
+      "100%|██████████| 44.7M/44.7M [00:02<00:00, 16.3MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ResNet(\n",
+       "  (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\n",
+       "  (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (relu): ReLU(inplace=True)\n",
+       "  (maxpool): MaxPool2d(kernel_size=3, stride=2, padding=1, dilation=1, ceil_mode=False)\n",
+       "  (layer1): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer2): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(64, 128, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer3): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 256, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(128, 256, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (layer4): Sequential(\n",
+       "    (0): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (downsample): Sequential(\n",
+       "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
+       "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "  )\n",
+       "  (avgpool): AdaptiveAvgPool2d(output_size=(1, 1))\n",
+       "  (fc): Linear(in_features=512, out_features=1000, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights = models.ResNet18_Weights.DEFAULT\n",
+    "model = models.resnet18(weights=weights)\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -288,13 +513,14 @@
     "model = model.to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
-    "optimizer = optim.SGD(params=model.classifier.parameters(), lr=0.001, momentum=0.9)  \n",
+    "# optimizer = optim.SGD(params=model.classifier.parameters(), lr=0.001, momentum=0.9) \n",
+    "optimizer = optim.Adam(params=model.classifier.parameters(), lr=0.001) \n",
     "exp_lr_scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=7, gamma=0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +539,7 @@
     "            print('-' * 10)\n",
     "\n",
     "            # Each epoch has a training and validation phase\n",
-    "            for phase in ['train', 'val']:\n",
+    "            for phase in ['train', 'valid']:\n",
     "                if phase == 'train':\n",
     "                    model.train()  # Set model to training mode\n",
     "                else:\n",
@@ -354,7 +580,7 @@
     "                print(f'{phase} Loss: {epoch_loss:.4f} Acc: {epoch_acc:.4f}')\n",
     "\n",
     "                # deep copy the model\n",
-    "                if phase == 'val' and epoch_acc > best_acc:\n",
+    "                if phase == 'valid' and epoch_acc > best_acc:\n",
     "                    best_acc = epoch_acc\n",
     "                    torch.save(model.state_dict(), best_model_params_path)\n",
     "\n",
@@ -371,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +605,132 @@
      "output_type": "stream",
      "text": [
       "Epoch 0/24\n",
-      "----------\n"
+      "----------\n",
+      "train Loss: 1.3655 Acc: 0.6380\n",
+      "valid Loss: 0.9711 Acc: 0.7347\n",
+      "\n",
+      "Epoch 1/24\n",
+      "----------\n",
+      "train Loss: 1.2279 Acc: 0.6796\n",
+      "valid Loss: 1.0142 Acc: 0.7359\n",
+      "\n",
+      "Epoch 2/24\n",
+      "----------\n",
+      "train Loss: 1.2115 Acc: 0.6818\n",
+      "valid Loss: 0.9168 Acc: 0.7653\n",
+      "\n",
+      "Epoch 3/24\n",
+      "----------\n",
+      "train Loss: 1.1810 Acc: 0.7031\n",
+      "valid Loss: 0.8746 Acc: 0.7812\n",
+      "\n",
+      "Epoch 4/24\n",
+      "----------\n",
+      "train Loss: 1.1602 Acc: 0.7169\n",
+      "valid Loss: 0.8463 Acc: 0.7812\n",
+      "\n",
+      "Epoch 5/24\n",
+      "----------\n",
+      "train Loss: 1.1689 Acc: 0.7121\n",
+      "valid Loss: 0.8899 Acc: 0.7836\n",
+      "\n",
+      "Epoch 6/24\n",
+      "----------\n",
+      "train Loss: 0.9155 Acc: 0.7618\n",
+      "valid Loss: 0.7857 Acc: 0.8081\n",
+      "\n",
+      "Epoch 7/24\n",
+      "----------\n",
+      "train Loss: 0.8876 Acc: 0.7682\n",
+      "valid Loss: 0.7679 Acc: 0.8081\n",
+      "\n",
+      "Epoch 8/24\n",
+      "----------\n",
+      "train Loss: 0.8508 Acc: 0.7720\n",
+      "valid Loss: 0.7469 Acc: 0.8105\n",
+      "\n",
+      "Epoch 9/24\n",
+      "----------\n",
+      "train Loss: 0.8272 Acc: 0.7817\n",
+      "valid Loss: 0.7379 Acc: 0.8117\n",
+      "\n",
+      "Epoch 10/24\n",
+      "----------\n",
+      "train Loss: 0.8138 Acc: 0.7769\n",
+      "valid Loss: 0.7314 Acc: 0.8142\n",
+      "\n",
+      "Epoch 11/24\n",
+      "----------\n",
+      "train Loss: 0.8272 Acc: 0.7772\n",
+      "valid Loss: 0.7101 Acc: 0.8166\n",
+      "\n",
+      "Epoch 12/24\n",
+      "----------\n",
+      "train Loss: 0.7596 Acc: 0.7909\n",
+      "valid Loss: 0.7154 Acc: 0.8166\n",
+      "\n",
+      "Epoch 13/24\n",
+      "----------\n",
+      "train Loss: 0.7686 Acc: 0.7938\n",
+      "valid Loss: 0.7088 Acc: 0.8166\n",
+      "\n",
+      "Epoch 14/24\n",
+      "----------\n",
+      "train Loss: 0.7478 Acc: 0.7958\n",
+      "valid Loss: 0.7046 Acc: 0.8227\n",
+      "\n",
+      "Epoch 15/24\n",
+      "----------\n",
+      "train Loss: 0.7813 Acc: 0.7895\n",
+      "valid Loss: 0.7011 Acc: 0.8227\n",
+      "\n",
+      "Epoch 16/24\n",
+      "----------\n",
+      "train Loss: 0.7687 Acc: 0.7926\n",
+      "valid Loss: 0.7010 Acc: 0.8240\n",
+      "\n",
+      "Epoch 17/24\n",
+      "----------\n",
+      "train Loss: 0.7540 Acc: 0.7911\n",
+      "valid Loss: 0.7021 Acc: 0.8191\n",
+      "\n",
+      "Epoch 18/24\n",
+      "----------\n",
+      "train Loss: 0.7603 Acc: 0.7943\n",
+      "valid Loss: 0.6987 Acc: 0.8215\n",
+      "\n",
+      "Epoch 19/24\n",
+      "----------\n",
+      "train Loss: 0.7491 Acc: 0.7883\n",
+      "valid Loss: 0.6972 Acc: 0.8191\n",
+      "\n",
+      "Epoch 20/24\n",
+      "----------\n",
+      "train Loss: 0.7617 Acc: 0.7943\n",
+      "valid Loss: 0.6975 Acc: 0.8178\n",
+      "\n",
+      "Epoch 21/24\n",
+      "----------\n",
+      "train Loss: 0.7426 Acc: 0.7901\n",
+      "valid Loss: 0.6974 Acc: 0.8178\n",
+      "\n",
+      "Epoch 22/24\n",
+      "----------\n",
+      "train Loss: 0.7571 Acc: 0.7962\n",
+      "valid Loss: 0.6974 Acc: 0.8191\n",
+      "\n",
+      "Epoch 23/24\n",
+      "----------\n",
+      "train Loss: 0.7435 Acc: 0.7938\n",
+      "valid Loss: 0.6975 Acc: 0.8203\n",
+      "\n",
+      "Epoch 24/24\n",
+      "----------\n",
+      "train Loss: 0.7399 Acc: 0.8001\n",
+      "valid Loss: 0.6972 Acc: 0.8191\n",
+      "\n",
+      "Training complete in 69m 30s\n",
+      "Best val Acc: 0.823961\n"
      ]
     }
    ],
@@ -424,7 +775,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Save the checkpoint\n"
+    "# TODO: Save the checkpoint\n",
+    "def save_model(epochs, model, optimizer, criterion):\n",
+    "    \"\"\"\n",
+    "    Function to save the trained model to disk.\n",
+    "    \"\"\"\n",
+    "    model.class_to_idx = image_datasets['train'].class_to_idx\n",
+    "    torch.save({\n",
+    "        'epoch': epochs,\n",
+    "        'model_state_dict': model.state_dict(),\n",
+    "        'optimizer_state_dict': optimizer.state_dict(),\n",
+    "        'loss': criterion,\n",
+    "    }, 'outputs/model.pth')"
    ]
   },
   {
@@ -598,7 +960,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
