--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -58,10 +58,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 64\n",
-    "HIDDEN_NEURONS = 512\n",
+    "BATCH_SIZE = 32\n",
+    "HIDDEN_NEURONS = 1024\n",
     "EPOCHS = 10\n",
-    "LEARNING_RATE = 0.003"
+    "LEARNING_RATE = 0.001"
    ]
   },
   {
@@ -197,7 +197,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Load pre-trained models and freeze parameters\n",
     "weights = models.VGG16_Weights.DEFAULT\n",
     "model = models.vgg16(weights=weights)\n",
     "for param in model.parameters():\n",
@@ -211,12 +210,14 @@
     "    nn.ReLU(inplace=True),\n",
     "    nn.Dropout(),\n",
     "    nn.Linear(in_features=HIDDEN_NEURONS, out_features=len(image_datasets['train'].classes)),\n",
+    "    nn.LogSoftmax(dim=1)\n",
     ")\n",
     "\n",
     "model = model.to(device)\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(params=model.classifier.parameters(), lr=LEARNING_RATE)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=3, gamma=0.1) "
+    "criterion = nn.NLLLoss()\n",
+    "optimizer = optim.SGD(params=model.classifier.parameters(), lr=LEARNING_RATE, momentum=0.9)\n",
+    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=7, gamma=0.1)\n",
+    "model.classifier "
    ]
   },
   {
@@ -292,20 +293,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test(model, dataloader, criterion):\n",
-    "    size = len(dataloader.dataset)\n",
+    "def test(model):\n",
     "    model.eval()\n",
-    "    test_loss, test_correct = 0, 0\n",
+    "    running_loss, running_corrects = 0, 0\n",
     "    with torch.no_grad():\n",
-    "        for inputs, labels in dataloader:\n",
+    "        for inputs, labels in dataloaders['test']:\n",
     "            inputs, labels = inputs.to(device), labels.to(device)\n",
     "            outputs = model(inputs)\n",
     "            _, preds = torch.max(outputs, 1)\n",
-    "            test_loss += criterion(preds, labels).item()\n",
-    "            test_correct += torch.sum(preds == labels.data)\n",
-    "    test_loss /= size\n",
-    "    test_correct /= size\n",
-    "    print(f\"Test Error: \\n Accuracy: {(100*test_correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")\n"
+    "            loss = criterion(outputs, labels)\n",
+    "            running_loss += loss.item()\n",
+    "            running_corrects += torch.sum(preds == labels.data)\n",
+    "    test_loss = running_loss / dataset_sizes['test']\n",
+    "    test_acc = running_corrects.double() / dataset_sizes['test']\n",
+    "    print(f'Test Loss: {test_loss:.4f} Acc: {test_acc:.4f}')"
    ]
   },
   {
@@ -314,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test(model_ft, dataloaders['test'], criterion)"
+    "test(model_ft)"
    ]
   },
   {
@@ -337,18 +338,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_checkpoint(epochs, model, optimizer, criterion):\n",
+    "def save_checkpoint(model):\n",
     "    \"\"\"\n",
     "    Function to save the trained model to disk.\n",
     "    \"\"\"\n",
     "    model.class_to_idx = image_datasets['train'].class_to_idx\n",
     "    torch.save({\n",
-    "        'epoch': epochs,\n",
+    "        'arch': 'vgg16',\n",
     "        'model_state_dict': model.state_dict(),\n",
-    "        'optimizer_state_dict': optimizer.state_dict(),\n",
-    "        'loss': criterion,\n",
-    "        'class_to_idx': model.class_to_idx\n",
-    "    }, 'outputs/model.pth')"
+    "        'class_to_idx': model.class_to_idx,\n",
+    "        'hidden_units': HIDDEN_NEURONS,\n",
+    "        'n_features': dataset_sizes['train']\n",
+    "    }, 'models/model-ft.pt')"
    ]
   },
   {
@@ -357,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_checkpoint(epochs=EPOCHS, model=model_ft, optimizer=optimizer, criterion=criterion)"
+    "save_checkpoint(model_ft)"
    ]
   },
   {
@@ -376,47 +377,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
-    "def load_checkpoint(filepath, model, optimizer, epoch, criterion):\n",
+    "def load_checkpoint(filepath):\n",
     "    checkpoint = torch.load(filepath)\n",
-    "    model.class_to_idx = checkpoint[\"class_to_idx\"]\n",
-    "    model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
-    "    optimizer.load_state_dict(checkpoint[\"optimizer_state_dict\"])\n",
-    "    classifier = nn.Sequential(\n",
+    "    model = models.vgg16()\n",
+    "    model.classifier = nn.Sequential(\n",
     "        nn.Linear(\n",
     "            in_features=model.classifier[0].in_features,\n",
-    "            out_features=HIDDEN_NEURONS,\n",
+    "            out_features=checkpoint['hidden_units'],\n",
     "        ),\n",
     "        nn.ReLU(inplace=True),\n",
     "        nn.Dropout(),\n",
-    "        nn.Linear(in_features=HIDDEN_NEURONS, out_features=HIDDEN_NEURONS),\n",
+    "        nn.Linear(in_features=checkpoint['hidden_units'],\n",
+    "                  out_features=checkpoint['hidden_units']),\n",
     "        nn.ReLU(inplace=True),\n",
     "        nn.Dropout(),\n",
     "        nn.Linear(\n",
-    "            in_features=HIDDEN_NEURONS,\n",
-    "            out_features=len(image_datasets[\"train\"].classes),\n",
+    "            in_features=checkpoint['hidden_units'],\n",
+    "            out_features=checkpoint['n_features'],\n",
     "        ),\n",
     "        nn.LogSoftmax(dim=1),\n",
     "    )\n",
-    "    model.classifier = classifier\n",
-    "    epoch = checkpoint[\"epoch\"]\n",
-    "    criterion = checkpoint[\"loss\"]\n",
     "\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = models.vgg16()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
-    "load_checkpoint(\n",
-    "    filepath=\"outputs/model.pth\",\n",
-    "    model=model,\n",
-    ")"
+    "    model.class_to_idx = checkpoint[\"class_to_idx\"]\n",
+    "    model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
+    "    return model\n"
    ]
   },
   {
@@ -563,16 +547,13 @@
     "    image_tensor = torch.from_numpy(image).type(torch.Tensor)\n",
     "    image_tensor = image_tensor.to(device)\n",
     "    model_input = image_tensor.unsqueeze(0)\n",
-    "    probs = torch.exp(model.forward(model_input))\n",
-    "    top_probs, top_labs = probs.topk(topk)\n",
+    "    probs = torch.exp(model(model_input))\n",
+    "    top_probs, top_indices = probs.topk(topk)\n",
     "    top_probs = top_probs.detach().cpu().numpy().tolist()[0]\n",
-    "    top_labs = top_labs.detach().cpu().numpy().tolist()[0]\n",
-    "\n",
-    "    # Convert indices to classes\n",
+    "    top_indices = top_indices.detach().cpu().numpy().tolist()[0]\n",
     "    idx_to_class = {val: key for key, val in model.class_to_idx.items()}\n",
-    "    top_labels = [idx_to_class[lab] for lab in top_labs]\n",
-    "    # top_flowers = [cat_to_name[idx_to_class[lab]] for lab in top_labs]\n",
-    "    return top_probs, top_labels"
+    "    classes = [idx_to_class[lab] for lab in top_indices]\n",
+    "    return top_probs, classes"
    ]
   },
   {
@@ -605,22 +586,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Display an image along with the top 5 classes\n",
-    "def plot_solution(image_path, model):\n",
+    "def sanity_check(image_path, model):\n",
     "    plt.figure(figsize = (6,10))\n",
-    "    ax = plt.subplot(2,1,1)\n",
+    "    ax1 = plt.subplot(2,1,1)\n",
     "\n",
     "    flower_num = image_path.split('/')[2]\n",
     "    title_ = cat_to_name[flower_num]\n",
     "\n",
     "    img = process_image(image_path)\n",
-    "    imshow(img, ax, title = title_)\n",
+    "    imshow(img, ax1, title = title_)\n",
     "\n",
-    "    probs, labs, flowers = predict(image_path, model) \n",
+    "    probs, classes = predict(image_path, model)\n",
+    "    names = [cat_to_name[cat] for cat in classes] \n",
     "\n",
-    "    plt.subplot(2,1,2)\n",
-    "    plt.bar(x=probs, )\n",
-    "    sns.barplot(x=probs, y=flowers, color=sns.color_palette()[0]);\n",
+    "    ax2 = plt.subplot(2,1,2)\n",
+    "    ax2.barh(names, probs, color='blue')\n",
+    "    ax2.invert_yaxis()\n",
     "    plt.show()"
    ]
   },
@@ -630,8 +611,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_path = 'flowers/test/28/image_05230.jpg'\n",
-    "plot_solution(image_path, model_ft)"
+    "image_path = 'flowers/test/28/image_05242.jpg'\n",
+    "sanity_check(image_path, model_ft)"
    ]
   },
   {
@@ -658,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
